--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -12,7 +12,7 @@
             <div class="user-message user-message-error"><%= errorMessage %> </div>
         <% } %> 
 
-        <form class="main-form" action="/login" method="POST">
+        <form class="main-form" action="/reset-password" method="POST">
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" />
             
