--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -9,12 +9,21 @@
     <main>
         <h2>Editar Produtos</h2>
 
+        <% if(errorMessage){ %> 
+            <div class="user-message user-message-error"><%= errorMessage %> </div>
+        <% } %> 
+
         <form class="main-form" action="/admin/edit-product" method="POST">
             <label for="title">Nome:</label>
-            <input name="title" id="title" value="<%= prod.title %>" />
+            <input 
+            class="<%= validationErrors.find(error=> error.param === 'title') ? 'invalid' : '' %>" 
+            name="title" id="title" value="<%= prod.title %>" />
 
             <label for="price">Preço:</label>
-            <input type="number" name="price" id="price" step="any" value="<%= prod.price %>"/>
+            <input
+            class="<%= validationErrors.find(error=> error.param === 'price') ? 'invalid' : '' %>" 
+
+            type="number" name="price" id="price" step="any" value="<%= prod.price %>"/>
 
             <label for="description">Descricao:</label>
             <textarea name="description" id="description"><%= prod.description %></textarea>
