--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -12,19 +12,18 @@
             <div class="user-message user-message-error"><%= errorMessage %> </div>
         <% } %> 
 
-        <form class="main-form" action="/login" method="POST">
-            <label for="email">E-mail:</label>
-            <input name="email"/>
+        <form class="main-form" action="/new-password" method="POST">
 
             <label for="password">Senha:</label>
-            <input type="password" name="password"/>
+            <input type="password" name="password" id="password" />
             
+            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+            <input type="hidden" name="userId" value="<%= userId %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-            <button class="btn">cadastrar</button>
+            <button class="btn">Redefinir senha</button>
         </form>
-        <a href="/signup">Nao tem cadastro?</a> <br>
-        <a href="/reset-password">Redefinir senha</a>
+
     </main>
 
     <%- include('partials/footer') %>
