--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -2,24 +2,27 @@
 
 </head>
 
-<body>
+<body class="forms-body">
 
     <%- include('partials/navigation') %>
 
-    <main>
-        <h2>Redefina sua senha</h2>
-        <% if(errorMessage){ %> 
-            <div class="user-message user-message-error"><%= errorMessage %> </div>
-        <% } %> 
-
-        <form class="main-form" action="/reset-password" method="POST">
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" />
-            
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-
-            <button class="btn">Redefinir</button>
-        </form>
+    <main class="forms-main">
+        <div class="form-wrapper">
+            <h2>Redefina sua senha</h2>
+            <% if(errorMessage){ %> 
+                <div class="user-message user-message-error"><%= errorMessage %> </div>
+            <% } %> 
+    
+            <form class="main-form" action="/reset-password" method="POST">
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" />
+                
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+    
+                <button class="btn">Redefinir</button>
+            </form> 
+        </div>
+        
     </main>
 
     <%- include('partials/footer') %>
