--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -2,37 +2,40 @@
 
 </head>
 
-<body>
+<body class="forms-body">
 
     <%- include('partials/navigation') %>
 
-    <main>
-        <h2>Adicionar Produtos</h2>
+    <main class="forms-main">
+        <div class="form-wrapper">
+            <h2>Adicionar Produtos</h2>
 
-        <% if(errorMessage){ %> 
-            <div class="user-message user-message-error"><%= errorMessage %> </div>
-        <% } %> 
-        <form class="main-form" action="/admin/add-product" method="POST">
-            <label for="title">Titulo:</label>
-            <input
-            class="<%= validationErrors.find(error=> error.param === 'title') ? 'invalid' : '' %>" 
-            name="title" value="<%= oldInput.title %>" />
-
-            <label for="price">Preço:</label>
-            <input
-            class="<%= validationErrors.find(error=> error.param === 'price') ? 'invalid' : '' %>" 
-            type="number" name="price" id="price" step="any" value="<%= oldInput.price %>" />
-
-            <label for="description">Descricao:</label>
-            <textarea name="description" id="description"></textarea>
-
-            <label for="imageUrl">URL da Imagem:</label>
-            <input name="imageUrl" id="imageUrl" value="<%= oldInput.imageUrl %>"/>
-
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-
-            <button class="btn">cadastrar</button>
-        </form>
+            <% if(errorMessage){ %> 
+                <div class="user-message user-message-error"><%= errorMessage %> </div>
+            <% } %> 
+            <form class="main-form" action="/admin/add-product" method="POST">
+                <label for="title">Titulo:</label>
+                <input
+                class="<%= validationErrors.find(error=> error.param === 'title') ? 'invalid' : '' %>" 
+                name="title" value="<%= oldInput.title %>" />
+    
+                <label for="price">Preço:</label>
+                <input
+                class="<%= validationErrors.find(error=> error.param === 'price') ? 'invalid' : '' %>" 
+                type="number" name="price" id="price" step="any" value="<%= oldInput.price %>" />
+    
+                <label for="description">Descricao:</label>
+                <textarea name="description" id="description"></textarea>
+    
+                <label for="imageUrl">URL da Imagem:</label>
+                <input name="imageUrl" id="imageUrl" value="<%= oldInput.imageUrl %>"/>
+    
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+    
+                <button class="btn">cadastrar</button>
+            </form>
+        </div>
+        
     </main>
 
     <%- include('partials/footer') %>
