--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -2,27 +2,30 @@
 
 </head>
 
-<body>
+<body class="forms-body">
 
     <%- include('partials/navigation') %>
 
-    <main>
-        <h2>Login</h2>
-        <% if(errorMessage){ %> 
-            <div class="user-message user-message-error"><%= errorMessage %> </div>
-        <% } %> 
-
-        <form class="main-form" action="/new-password" method="POST">
-
-            <label for="password">Senha:</label>
-            <input type="password" name="password" id="password" />
-            
-            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
-            <input type="hidden" name="userId" value="<%= userId %>">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-
-            <button class="btn">Redefinir senha</button>
-        </form>
+    <main class="forms-main">
+        <div class="form-wrapper">
+            <h2>Login</h2>
+            <% if(errorMessage){ %> 
+                <div class="user-message user-message-error"><%= errorMessage %> </div>
+            <% } %> 
+    
+            <form class="main-form" action="/new-password" method="POST">
+    
+                <label for="password">Senha:</label>
+                <input type="password" name="password" id="password" />
+                
+                <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+                <input type="hidden" name="userId" value="<%= userId %>">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+    
+                <button class="btn">Redefinir senha</button>
+            </form>  
+        </div>
+        
 
     </main>
 
