--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -288,15 +288,68 @@ main {
 
 /*cart*/
 .cart {
+    width: 70%;
+    list-style: none;
+}
+
+.cart-item {
+    border-bottom: 1px solid #7f8788;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    height: 130px;
+    align-items: center;
+    text-align: center;
+}
+
+.cart-item.description {
+    height: 60px;
+}
+
+.cart-item.description .col1 {
+    text-align: left;
+    padding-left: 5px;
+}
+
+.col1 {
+    grid-column: 1; 
+}
+
+.col1.img {
+    grid-column: 1;
+    height: 100%;
+    width: 110px;
+    padding: 5px;
+}
+
+.col2 {
+    grid-column: 2/4;
+}
+
+.col3 {
+    grid-column: 4;
+}
+
+.col4{
+    grid-column: 5;
+}
+
+.delete-btn {
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+/*
+.cart {
     display: grid;
     list-style: none;
 }
 
 .cart-item {
-    background-color: #dedfe0;
     width: 70%;
-    height: 60px;
-    margin: 5px auto;
+    height: 100px;
+    padding: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -320,6 +373,7 @@ main {
     margin: 10px;
     outline: none;
 }
+*/
 
 /*messages */
 .user-message {
