--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -27,8 +27,11 @@
                 <label for="description">Descricao:</label>
                 <textarea name="description" id="description"></textarea>
     
-                <label for="imageUrl">URL da Imagem:</label>
-                <input name="imageUrl" id="imageUrl" value="<%= oldInput.imageUrl %>"/>
+                <!-- <label for="imageUrl">URL da Imagem:</label>
+                <input name="imageUrl" id="imageUrl" value="<%= oldInput.imageUrl %>"/> -->
+
+                <label for="image">Imagem:</label>
+                <input type="file" name="image" id="image" />
     
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     
