--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -13,7 +13,7 @@
             <% if(errorMessage){ %> 
                 <div class="user-message user-message-error"><%= errorMessage %> </div>
             <% } %> 
-            <form class="main-form" action="/admin/add-product" method="POST">
+            <form class="main-form" action="/admin/add-product" method="POST" enctype="multipart/form-data">
                 <label for="title">Titulo:</label>
                 <input
                 class="<%= validationErrors.find(error=> error.param === 'title') ? 'invalid' : '' %>" 
