--- a/views/details.ejs
+++ b/views/details.ejs
@@ -8,7 +8,7 @@
 
    <main class="details-main">
        <div class="product-box">
-           <img src="<%= prod.imageUrl %> " alt="">
+           <img src="/<%= prod.imageUrl %> " alt="">
             <div class="product-description">
                 <h2><%= prod.title %> </h2>
                 <p><%= prod.description %> </p>
