changes made on ui

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -40,9 +40,9 @@
          </ul>
          <div class="cart-summary">
             <h3>Resumo da compra:</h3>
-            <p>Produtos: R$ <%= totalPrice %> </p>
-            <p>Frete: </p>
-            <p>Total: </p>
+            <p>Produtos: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p>
+            <p>Frete: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p></p>
+            <p>Total: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p></p>
             <form action="/create-order" method="POST" class="center">
                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                <button type="submit" class="btn">Order Now</button>
