--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -12,20 +12,34 @@
 
         </ul>
 
-        <ul> <!--itens da direita-->
+        <!--itens da direita-->
+        <div class="dropdown">
+            <button class="main-header-item">entrar</button>
+            <ul>
+                <li class="main-header-item"><a href="/login" class="<%= path === '/login' ? 'active' : 'dropdown-link' %> ">login</a></li>
+                <li class="main-header-item"><a href="/signup" class="<%= path === '/signup' ? 'active' : 'dropdown-link' %> ">cadastro</a></li>
+
+            </ul>
+
+        </div>
+
+
+
+
+        <!-- <ul> 
         <% if(loggedIn){ %>
             <li class="main-header-item">Olá, <%= user.name%> </li>
             
             <li class="main-header-item">
                 <form action="/logout" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">  
-                    <button type="submit" class="<%= path === '/logout' ? 'active' : ' ' %> ">logout</button>
+                    <button type="submit">logout</button>
                 </form>
             </li>
             
         <% }else { %>  
             <li class="main-header-item"><a href="/login" class="<%= path === '/login' ? 'active' : ' ' %> ">login</a></li>
         <% }%>
-        </ul>
+        </ul> -->
     </nav>
 </header>
