--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,4 +1,6 @@
 /* global */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@400;500;700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -7,7 +9,7 @@
 
 html {
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: 'Poppins';
     height: 100%;   
 }
 
@@ -18,9 +20,14 @@ body {
 }
 
 h2 {
+    font-size: 30px;
     display: flex;
     justify-content: center;
     margin: 10px;
+}
+
+a:focus, button:focus {
+    outline: none;
 }
 
 .btn {
@@ -50,7 +57,7 @@ h2 {
 
 .main-header {
     background-color: #238c91;
-    font-size: 26px;
+    font-size: 22px;
     width: 100%;
     height: 6rem;
 }
@@ -62,9 +69,46 @@ h2 {
     justify-content: space-between;
 }
 
-.main-header-nav ul {
+.dropdown {
+    position: relative;
+}
+
+.dropdown ul {
+    width: 200px;
+    height: 100px;
+    border: 2px solid #238c91;
+    border-top: none;
+    background-color: white;
+    position: absolute;
+    right: 0px;
+    top: 64px;
     list-style: none;
-    display: flex;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 0 0 5px 5px;
+}
+
+.dropdown ul li, .dropdown ul li a{
+    width: 100%;
+    height: 50%;
+    margin: 0;
+    color: black;
+}
+
+.dropdown ul li:hover {
+    background-color: #238c91;
+}
+
+.dropdown ul .main-header-item:hover + .dropdown-link {
+    color: white;
+}
+
+.dropdown button:focus + ul {
+    
+    opacity: 1;
+    visibility: visible;
+    transition: 0.2s ease-in;
 }
 
 .main-header-item,
@@ -124,8 +168,8 @@ main {
 }
 
 .product-card div h4 {
-    font-size: 16px;
-    color: #24282b;
+    font-size: 14px;
+    color: #363535;
     font-weight: lighter;
 }
 
@@ -171,6 +215,7 @@ main {
 }
 
 .product-description p {
+    font-family: 'Roboto';
     font-size: 20px;
     margin: 10px;
     text-align: justify;
@@ -306,7 +351,13 @@ main {
 }
 
 .cart-item.description {
+    
     height: 60px;
+}
+
+.cart-item.description p {
+    font-family: 'Roboto';
+    font-size: 18px;
 }
 
 .cart-item.description .col1 {
@@ -351,13 +402,24 @@ main {
 
 .cart-summary {
     border-radius: 10px;
-    background-color:rgb(238, 238, 238);
-    line-height: 60px;
+    background-color:rgb(212, 211, 211);
     width: 25%;
     height: 20rem;
     margin-left: 20px;
-    padding: 5px 15px;
+    padding: 5px 20px;
 }
+
+.cart-summary p {
+    margin-top: 15px;
+}
+
+.cart-summary .cart-summary-price {
+    text-align: right;
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 0;
+}
+
 
 /*messages */
 .user-message {
