--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -69,47 +69,6 @@ a:focus, button:focus {
     justify-content: space-between;
 }
 
-.dropdown {
-    position: relative;
-}
-
-.dropdown ul {
-    width: 200px;
-    height: 100px;
-    border: 2px solid #238c91;
-    border-top: none;
-    background-color: white;
-    position: absolute;
-    right: 0px;
-    top: 64px;
-    list-style: none;
-    text-align: center;
-    opacity: 0;
-    visibility: hidden;
-    border-radius: 0 0 5px 5px;
-}
-
-.dropdown ul li, .dropdown ul li a{
-    width: 100%;
-    height: 50%;
-    margin: 0;
-    color: black;
-}
-
-.dropdown ul li:hover {
-    background-color: #238c91;
-}
-
-.dropdown ul .main-header-item:hover + .dropdown-link {
-    color: white;
-}
-
-.dropdown button:focus + ul {
-    
-    opacity: 1;
-    visibility: visible;
-    transition: 0.2s ease-in;
-}
 
 .main-header-item,
 .main-header-item a,
@@ -134,6 +93,61 @@ a:focus, button:focus {
 }
 .main-header-item button:focus {
     outline: none;
+}
+
+.dropdown {
+    position: relative;
+    list-style: none;
+}
+
+.dropdown .main-header-item.drop-item {
+    height: 96px;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown ul {
+    width: 200px;
+    height: 100px;
+    border: 2px solid #238c91;
+    border-top: none;
+    background-color: white;
+    position: absolute;
+    right: 0px;
+    top: 100%;
+    list-style: none;
+    text-align: center;
+    display: none;
+    border-radius: 0 0 5px 5px;
+}
+
+.dropdown li:hover > ul {
+    display: block;
+    transition: 0.2s ease-in;
+}
+
+.dropdown ul li{
+    width: 100%;
+    height: 50%;
+    margin: 0;
+}
+
+.dropdown ul li a, .dropdown ul li button{
+    color: #238c91;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dropdown ul li:hover{
+    background-color: #238c91;
+}
+
+.dropdown ul li:hover a, .dropdown ul li:hover button{
+    color: white;
 }
 
 /*grid*/
