added multiple images functionality

--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -31,7 +31,7 @@
                 <input name="imageUrl" id="imageUrl" value="<%= oldInput.imageUrl %>"/> -->
 
                 <label for="image">Imagem:</label>
-                <input type="file" name="image" id="image" />
+                <input type="file" name="image" id="image" multiple/>
     
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     
