--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -14,10 +14,10 @@
         <ul>
         <% for(order of orders) { %>
             <li>
-                <h3>ID: #<%= order.id  %> </h3>
+                <h3>ID: #<%= order.id  %> - <a href="/orders/<%= order.id %> ">Fatura</a></h3>
                 <ul>
                     <% for(item of order.products) {%> 
-                        <li><%= item.title %>  (<%= item.orderItem.quantity %>) - <a href="/orders/<%= order.id %> ">invoice</a> </li>
+                        <li><%= item.title %> - (<%= item.orderItem.quantity %>)  </li>
                     <% } %> 
                 </ul>
             </li>
