--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -24,7 +24,6 @@
 
 
          <% for(prod of prods) { %>
-            <% totalPrice+= parseFloat(prod.price*prod.cartItem.quantity)%> 
             <li class="cart-item">
                <img src="/<%=prod.images[0].path%> "  class="col1 img">
                   <h4 class="col2"><%= prod.title %> </h4>
@@ -40,9 +39,9 @@
          </ul>
          <div class="cart-summary">
             <h3>Resumo da compra:</h3>
-            <p>Produtos: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p>
-            <p>Frete: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p></p>
-            <p>Total: <br> <p class="cart-summary-price">R$ <%= totalPrice %></p></p></p>
+            <p>Produtos: <br> <p class="cart-summary-price">R$ <%= totalSum.toFixed(2) %></p></p>
+            <p>Frete: <br> <p class="cart-summary-price"> - </p></p></p>
+            <p>Total: <br> <p class="cart-summary-price">R$ <%= totalSum.toFixed(2) %></p></p></p>
             <form action="/create-order" method="POST" class="center">
                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                <button type="submit" class="btn">Order Now</button>
